--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -1,9 +1,9 @@
 .vendor-button{
     background-color: #0d3d66;
 }
-.form-control{
+/* .form-control{
     width: 400px;
-}
+} */
 .btn-outline-primary{
     color: #03a9f3 !important;
 }
