--- a/src/app/components/banner/add.banner.html
+++ b/src/app/components/banner/add.banner.html
@@ -23,7 +23,8 @@
                                     <fieldset>
                                         <div class="form-group">
                                             <label for="exampleInputEmail1">Title</label>
-                                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="title" name="title">
+                                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="title" name="title"
+                                                style="width:400px">
                                         </div>
                                         <div class="row">
                                             <div class="col-md-12 col-sm-12">
@@ -98,7 +99,7 @@
                                                                     </div>
                                                                     <div class="form-group" *ngIf="skus">
                                                                         <label for="firstname" name="prodName">Sku</label>
-                                                                        <input id="category" class="form-control"  type="text" />
+                                                                        <input id="category" class="form-control" type="text" />
                                                                     </div>
                                                                     <div class="form-group" *ngIf="brand">
                                                                         <label for="firstname" name="prodName">Brand</label>
