--- a/src/app/components/location/add.location.html
+++ b/src/app/components/location/add.location.html
@@ -18,28 +18,36 @@
                             <div class="card-body">
                                 <h4 class="card-title">Add Location</h4>
                                 <a routerLink="/location" id="show" class="btn  btn-maron" style="float: right;    margin-top: -45px;">Back</a>
-                                <form>
-                                    <div class="form-group">
+                                <form style="margin-top:30px;">
+                                    <!-- <div class="form-group">
                                         <label for="firstname">Select Country</label>
                                         <div class="form-group">
-                                            <select required class="form-control border-primary" id="exampleSelectPrimary"
-                                                [(ngModel)]="country" name="country" (change)="changeCountry($event.target.value)">
-                                                <option value="" disabled selected hidden>Select country</option>
+                                            <select required class="form-control" id="exampleSelectPrimary" [(ngModel)]="country" name="country" (change)="changeCountry($event.target.value)">
+                                                <option value="">Select Country</option>
                                                 <option *ngFor="let data of countrydata" value="{{data.location_id}}">{{data.location}}</option>
                                             </select>
                                         </div>
+                                    </div> -->
+                                    <div class="form-group">
+
+                                        <select required class="form-control" (change)="changeCountry($event.target.value)">
+                                            <option value="" disabled>Select country</option>
+                                            <option *ngFor="let data of countrydata" value="{{data.location_id}}">{{data.location}}</option>
+                                        </select>
                                     </div>
                                     <div class="form-group">
-                                        <p>Select State</p>
-                                        <select required class="form-control border-primary" (change)="changeState($event.target.value)">
+
+                                        <select required class="form-control" (change)="changeState($event.target.value)">
+                                            <option value="" disabled>Select State</option>
                                             <option *ngFor="let state of statesData" value="{{state.location_id}}">
                                                 {{state.location}}
                                             </option>
                                         </select>
                                     </div>
                                     <div class="form-group">
-                                        <p>Select city</p>
-                                        <select required class="form-control border-primary" (change)="changeCity($event.target.value)">
+
+                                        <select required class="form-control" (change)="changeCity($event.target.value)">
+                                            <option value="" disabled>Select City</option>
                                             <option *ngFor="let city of cityData" value="{{city.location_id}}">
                                                 {{city.location}}
                                             </option>
@@ -58,14 +66,15 @@
                                         </datalist>
                                     </div> -->
                                     <div class="form-group">
-                                        <label for="exampleInputEmail1">Select Area</label>
-                                        <select required class="form-control border-primary" (change)="changeArea($event.target.value)">
+
+                                        <select required class="form-control" (change)="changeArea($event.target.value)">
+                                            <option value="" disabled>Select Area</option>
                                             <option *ngFor="let area of areaData" value="{{area.location_id}}">
                                                 {{area.location}}
                                             </option>
                                         </select>
                                     </div>
-                                    <button type="submit" class="btn btn-primary vendor-button" (click)="addLocation()">Add
+                                    <button type="submit" class="btn btn-primary vendor-button" (click)="addLocation()" style="margin-top:20px">Add
                                         Location
                                     </button>
                                     <!-- <button type="submit" class="btn btn-primary vendor-button"*ngIf="!addcat">Update
