--- a/src/app/components/banner/add.banner.html
+++ b/src/app/components/banner/add.banner.html
@@ -17,14 +17,14 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="card-title text-center">Add Banner</h4>
+                                <h4 class="card-title text-center">Main Banners</h4>
                                 <a routerLink="/banner" id="show" class="btn  btn-maron" style="float: right;    margin-top: -45px;">Back</a>
                                 <form class="cmxform" id="signupForm" method="get" action="#">
                                     <fieldset>
                                         <div class="form-group">
                                             <label for="exampleInputEmail1">Title</label>
                                             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="title" name="title"
-                                                style="width:400px">
+                                                style="width:400px" placeholder="Main Banners">
                                         </div>
                                         <div class="row">
                                             <div class="col-md-12 col-sm-12">
