--- a/src/app/components/banner/add.banner.html
+++ b/src/app/components/banner/add.banner.html
@@ -91,6 +91,9 @@
                                         <option *ngFor="let subCat of subCategoryName" value="{{subCat.sub_cat}}">{{subCat.sub_cat}}</option>
                                       </select>
                                     </div>
+                                    <div>
+                                            <label>{{skuValues.subNames}} </label>
+                                          </div>
                                   </div>
                                   <div class="form-group" *ngIf="skuValues.product">
                                     <label for="firstname">Product :</label>
