--- a/src/app/components/products/add.product.html
+++ b/src/app/components/products/add.product.html
@@ -91,53 +91,35 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-md-4 col-sm-4">
-                                            <div class="form-group">
-                                                <label for="firstname">Product Details :</label>
-                                                <br />
-                                                <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="Description" name="Description">
-                                </textarea>
-                                            </div>
+                                        <div class="col-md-4">
+                                            country
                                         </div>
-                                        <div class="col-md-4 col-sm-4">
-                                            <div class="form-group">
-                                                <label for="firstname">Specifications : </label>
-                                                <br />
-                                                <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="specification" name="specification">
-                               </textarea>
-                                            </div>
+                                        <div class="col-md-4">
+                                            state
                                         </div>
-                                        <div class="col-md-4 col-sm-4">
-                                            <div class="form-group">
-                                                <label for="firstname">Terms & Conditions</label>
-                                                <br />
-                                                <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="terms" name="terms">
-                               </textarea>
-                                            </div>
+                                        <div class="col-md-4">
+                                            city
                                         </div>
+                                        <!-- <div class="col-md-4">
+                                            <div class="form-group">
+                                                <h6>Select Delivery Options</h6>
+                                                <div class="margin" *ngFor="let item of list">
+                                                    <label>
+                                                        <input type="checkbox" name="options" value="{{item}}" [checked]="list.indexOf(item) == 0" [disabled]="list.indexOf(item) == 0"
+                                                            (click)="checkbox($event.target.checked,item.id,item)" />                                                        &nbsp;{{item.title}}
+                                                        {{option}}
+                                                    </label>
+                                                </div>
+                                            </div>
+                                        </div> -->
                                     </div>
                                     <div class="row">
-                                        <div class="col-md-4 col-sm-4">
-                                            <div class="form-group">
-                                                <h6 for="firstname">FAQs : </h6>
-                                                <label for="firstname">Question</label>
-                                                <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="faq" name="faq">
-                                                </textarea>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4 col-sm-4">
-                                            <div class="form-group">
-                                                <h6 for="firstname" style="margin-top:25px"></h6>
-                                                <label for="firstname">Answer</label>
-                                                <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="answer" name="answer">
-                                                </textarea>
-                                            </div>
+                                        <div class="col-md-4">
+                                            area
                                         </div>
                                         <div class="col-md-4">
                                             <div class="form-group">
-                                                <h6 style="margin-top: 53px;
-                                                margin-left: 20px;">Select
-                                                    Delivery Options</h6>
+                                                <h6>Select Delivery Options</h6>
                                                 <div class="margin" *ngFor="let item of list">
                                                     <label>
                                                         <input type="checkbox" name="options" value="{{item}}" [checked]="list.indexOf(item) == 0" [disabled]="list.indexOf(item) == 0"
@@ -148,6 +130,8 @@
                                             </div>
                                         </div>
                                     </div>
+
+
 
                                     <!-- <div class="row">
                                         <div class="col-md-4 col-sm-4">
@@ -257,7 +241,51 @@
                                                                 </div>
                                                             </div>
                                                         </div>
+                                                        <div class="row">
+                                                            <div class="col-md-4 col-sm-4">
+                                                                <div class="form-group">
+                                                                    <label for="firstname">Product Details :</label>
+                                                                    <br />
+                                                                    <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="Description" name="Description">
+                                                    </textarea>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-4 col-sm-4">
+                                                                <div class="form-group">
+                                                                    <label for="firstname">Specifications : </label>
+                                                                    <br />
+                                                                    <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="specification" name="specification">
+                                                   </textarea>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-4 col-sm-4">
+                                                                <div class="form-group">
+                                                                    <label for="firstname">Terms & Conditions</label>
+                                                                    <br />
+                                                                    <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="terms" name="terms">
+                                                   </textarea>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="row">
+                                                            <div class="col-md-4 col-sm-4">
+                                                                <div class="form-group">
+                                                                    <h6 for="firstname">FAQs : </h6>
+                                                                    <label for="firstname">Question</label>
+                                                                    <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="faq" name="faq">
+                                                                    </textarea>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-4 col-sm-4">
+                                                                <div class="form-group">
+                                                                    <h6 for="firstname" style="margin-top:25px"></h6>
+                                                                    <label for="firstname">Answer</label>
+                                                                    <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="answer" name="answer">
+                                                                    </textarea>
+                                                                </div>
+                                                            </div>
 
+                                                        </div>
                                                         <div class="row">
                                                             <div class="col-md-4">
                                                                 <div class="form-group">
