--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -20,7 +20,7 @@
                             Banners
                         </a>
                         <h4 class="card-title">
-                            Banners </h4>
+                            Main Banners </h4>
                         <br />
                         <div class="row">
                             <div class="col-12">
