--- a/src/app/components/banner/add.banner.html
+++ b/src/app/components/banner/add.banner.html
@@ -17,14 +17,14 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="card-title text-center">Add Banner</h4>
+                                <h4 class="card-title text-center">Main Banners</h4>
                                 <a routerLink="/banner" id="show" class="btn  btn-maron" style="float: right;    margin-top: -45px;">Back</a>
                                 <form class="cmxform" id="signupForm" method="get" action="#">
                                     <fieldset>
                                         <div class="form-group">
                                             <label for="exampleInputEmail1">Title</label>
                                             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="title" name="title"
-                                                placeholder="Main Banners" style="width: 400px">
+                                                placeholder="Main banners" style="width: 400px">
                                         </div>
                                         <div class="row">
                                             <div class="col-md-12 col-sm-12">
@@ -33,7 +33,7 @@
                                                         <button class="btn btn-primary" (click)=sku()>+</button>
                                                     </label>
                                                 </div>
-                                                <div class="" *ngFor="let skuValues of skusData;let i= index" style="margin-bottom:30px;border:solid 1px;padding: 20px">
+                                                <div class="" *ngFor="let skuValues of skusData;let i= index" style="margin-bottom:30px;border: solid 1px lightgrey;padding: 20px">
                                                     <div class="">
                                                         <div class="">
                                                             <div class="row">
@@ -135,7 +135,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-md-4">
-                                                                    <button type="submit" class="btn btn-primary vendor-button" (click)="deleteSku(i)" style="margin-top: 25px;">Delete
+                                                                    <button type="submit" class="btn btn-primary delete_banner" (click)="deleteSku(i)" style="margin-top: 25px;">Delete
                                                                         Banner
                                                                     </button>
                                                                 </div>
@@ -144,39 +144,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <!-- <div class="form-group">
-                                            <label for="sel1">Select Type</label>
-                                            <select class="form-control border-primary" id="sel1" (change)="onChange($event.target.value)">
-                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                                <option value="" disabled selected hidden>Select Type</option>
-                                                <option value="Categories">Categories</option>
-                                                <option value="Subcategories">Subcategories</option>
-                                                <option value="Product">Product</option>
-                                                <option value="sku">sku</option>
-                                                <option value="Brand">Brand</option>
-                                            </select>
-                                        </div> -->
-                                        <!-- <div class="form-group">
-                                            <label for="exampleInputEmail1">Mobile Banner</label>
-                                            <input class="form-control" type='file' (change)="onSelectFile($event)" multiple>
-                                            <br>
-                                            <img *ngFor='let url of urls' [src]="url" height="100" width="100" style="margin-right: 2%;border: 1px solid;margin-bottom:5%">
-                                            <div>
-                                                <img *ngFor="let imgUrl of mobile_banner;let i =index" [src]="imgUrl.image_path" height="100" width="100" style="margin-right: 2%;border: 1px solid;margin-bottom:5%"
-                                                    (click)="updateImage(imgUrl.mobile_image_id)" [ngClass]="{'selected':selectedImage==imgUrl.mobile_image_id}">
-                                            </div>
-                                        </div> -->
-                                        <!-- <div class="form-group">
-                                            <label for="exampleInputEmail1">Website Banner</label>
-                                            <input class="form-control" type='file' (change)="onSelectFile1($event)" multiple>
-                                            <br>
-                                            <img *ngFor='let url of urls1' [src]="url" height="100" width="100" style="margin-right: 2%;border: 1px solid;margin-bottom:5%">
-                                            <div>
-                                                <img *ngFor="let imgUrl of website_banner;let i =index" [src]="imgUrl.image_path" height="100" width="100" style="margin-right: 2%;border: 1px solid;margin-bottom:5%"
-                                                    (click)="updateImage1(imgUrl.web_image_id)" [ngClass]="{'selected':selectedImage1==imgUrl.web_image_id}">
-                                            </div>
-                                        </div> -->
+                                        </div>                                        
                                         <button type="submit" class="btn btn-primary vendor-button" *ngIf="addbanners" (click)="addbanner()">
                                             Add Banner
                                         </button>
