--- a/src/app/components/banner/best-appliances/add.best-appliances.html
+++ b/src/app/components/banner/best-appliances/add.best-appliances.html
@@ -17,14 +17,14 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="card-title text-center">Best Deals Banner</h4>
-                                <a routerLink="/bestDeals" id="show" class="btn  btn-maron" style="float: right;    margin-top: -45px;">Back</a>
+                                <h4 class="card-title text-center">Best Appliances Banners</h4>
+                                <a routerLink="/bestAppliances" id="show" class="btn  btn-maron" style="float: right;    margin-top: -45px;">Back</a>
                                 <form class="cmxform" id="signupForm" method="get" action="#">
                                     <fieldset>
                                         <div class="form-group">
                                             <label for="exampleInputEmail1">Title</label>
                                             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="title" name="title"
-                                                style="width:400px" placeholder="Best Deals">
+                                                placeholder="Main banners" style="width: 400px">
                                         </div>
                                         <div class="row">
                                             <div class="col-md-12 col-sm-12">
