--- a/src/app/components/banner/best-brands/add.brand.html
+++ b/src/app/components/banner/best-brands/add.brand.html
@@ -17,14 +17,14 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="card-title text-center">Best Deals Banner</h4>
-                                <a routerLink="/bestDeals" id="show" class="btn  btn-maron" style="float: right;    margin-top: -45px;">Back</a>
+                                <h4 class="card-title text-center">Popular Brands</h4>
+                                <a routerLink="/bestBrands" id="show" class="btn  btn-maron" style="float: right;    margin-top: -45px;">Back</a>
                                 <form class="cmxform" id="signupForm" method="get" action="#">
                                     <fieldset>
                                         <div class="form-group">
                                             <label for="exampleInputEmail1">Title</label>
                                             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="title" name="title"
-                                                style="width:400px" placeholder="Best Deals">
+                                                placeholder="Main banners" style="width: 400px">
                                         </div>
                                         <div class="row">
                                             <div class="col-md-12 col-sm-12">
@@ -47,8 +47,8 @@
                                                                 <div class="col-md-4">
                                                                     <div class="form-group">
                                                                         <!-- <label for="exampleInputEmail1">Type</label>
-                                                                            <input id="category" class="form-control" type="text" placeholder="type" [(ngModel)]="skuValues.type" [ngModelOptions]="{standalone:true}"
-                                                                            /> -->
+                                                                        <input id="category" class="form-control" type="text" placeholder="type" [(ngModel)]="skuValues.type" [ngModelOptions]="{standalone:true}"
+                                                                        /> -->
                                                                         <label for="sel1">Select Type</label>
                                                                         <select class="form-control border-primary" id="sel1" name="type" [(ngModel)]="skuValues.type" (change)="onChange($event.target.value,i)">
                                                                             <i class="fa fa-chevron-down" aria-hidden="true"></i>
@@ -59,7 +59,7 @@
                                                                             <option value="Subcategories">Subcategories</option>
                                                                             <option value="Product">Product</option>
                                                                             <!-- <option value="sku">sku</option>
-                                                                                <option value="Brand">Brand</option> -->
+                                                                            <option value="Brand">Brand</option> -->
                                                                         </select>
                                                                     </div>
                                                                 </div>
